# kekw_bot

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  drone.yml
migrations/2020-10-10-181716_create_movies/: down.sql  up.sql
src/: main.rs  models.rs  omdb.rs  schema.rs  utils.rs
src/commands/: mod.rs  movie.rs
src/db/: mod.rs  moviesubs.rs  periods.rs  rolls.rs  submissions.rs
src/models/: period.rs  roll.rs  submission.rs
src/timed/: jobs.rs
